
Fri Oct  8 18:37:34 EST 1999
(Christian)

Ok, I tried to update Ganymede as quickly as I could.
I did this in a _great_ hurry, and I hate that. So
I won't be surprised if I missed something. I updated
menustyles.cfg, no more warnigs from epp. I threw
out actionclasses.cfg, and renamed the few classes
I needed to something containing GANYMEDE. buttons.cfg
doesn't exist by default, I added a script that'll
build it and install the pulldown menues as well.
I still get emails from people telling me the pulldown
menues don't work, arrgh >:/ -- it's all in the dox
and the README.

I did not touch any of the imageclasses. Either I
modify all the ones that needed colormods or not,
I won't commit a half finished job.

I threw out all the borders that used colormods.

I haven't really  understood what that epplet stuff is
all about, (I'm not fully up to date on the list right
now), so I mostly copied from dialog widgets. But at
least there's something there now.

That's all I can do at the moment. If anybody sees
the need to change anything, please feel free to do so!
I'll be back on monday.

Have fun,
-- Christian. 

-------------------------------------------------------------------------------

Fri Oct  8 18:53:09 EST 1999
(Christian)

Uhmm .. _now_ there's no more buttons.cfg. Sorry :)

-------------------------------------------------------------------------------

Fri Oct  8 22:46:54 PDT 1999
(Mandrake)

I've gone through and put all the people in the AUTHORS file in the 
documentation.  updated the documentation some (now it all fits on one page in
a couple of key places) including the credits in the documentation.  I don't
want anyone that has been recognized to feel like they got credit left out.
If you've contributed patches and don't see your name listed - you NEED to 
let me know ASAP.  if you don't let me know in the next couple of days you
probably won't be in the 0.16.0 release's credits.  (sorry)