@@ -3304,3 +3304,10 @@ want anyone that has been recognized to feel like they got credit left out.
 If you've contributed patches and don't see your name listed - you NEED to 
 let me know ASAP.  if you don't let me know in the next couple of days you
 probably won't be in the 0.16.0 release's credits.  (sorry)
+
+-------------------------------------------------------------------------------
+
+Sat Oct  9 10:10:52 PDT 1999
+(Mandrake)
+
+groups patch from Martin Tyler
